--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -17,7 +17,7 @@
             </ion-select>
         </ion-item>
         <ion-item>
-            <ion-label>{{ config.general.letter_in_french}}{{ 'French Notation (DO, RE, MI, ...)' | translate }}</ion-label>
+            <ion-label>{{ 'French Notation (DO, RE, MI, ...)' | translate }}</ion-label>
             <ion-toggle [(ngModel)]="config.general.letter_in_french" (ngModelChange)="onChanged()"></ion-toggle>
         </ion-item>
     </ion-list>
