New filters in the chords detail

--- a/src/pages/chords-detail/chords-detail.html
+++ b/src/pages/chords-detail/chords-detail.html
@@ -14,18 +14,18 @@
             <ion-card-content>
                 <chord-position [position]="p.position"></chord-position>
             </ion-card-content>
-            <ion-card-header>{{ 'Position' | translate }}</ion-card-header>
-                <ion-row class="strings-container">
-                    <ion-col *ngFor="let s of p.position.strings">
-                        {{s.fret}}
-                    </ion-col>
-                </ion-row>
-                <ion-card-header>{{ 'Notes' | translate }}</ion-card-header>
-                <ion-row class="strings-container">
-                    <ion-col *ngFor="let s of p.position.strings">
-                        <note-name *ngIf="s.finger >= 0" [note]="s.note" [french]="config.general.letter_in_french"></note-name>
-                    </ion-col>
-                </ion-row>
+            <ion-card-header *ngIf="config.chords.detail_strings">{{ 'Position' | translate }}</ion-card-header>
+            <ion-row *ngIf="config.chords.detail_strings" class="strings-container">
+                <ion-col *ngFor="let s of p.position.strings">
+                    {{s.fret}}
+                </ion-col>
+            </ion-row>
+            <ion-card-header *ngIf="config.chords.detail_notes">{{ 'Notes' | translate }}</ion-card-header>
+            <ion-row *ngIf="config.chords.detail_notes" class="strings-container">
+                <ion-col *ngFor="let s of p.position.strings">
+                    <note-name *ngIf="s.finger >= 0" [note]="s.note" [french]="config.general.letter_in_french"></note-name>
+                </ion-col>
+            </ion-row>
             <div class="buttons">
                 <button *ngIf="!p.isFavorited" ion-button icon-left (click)="favorite(i)">
                     <ion-icon name="star" item-left></ion-icon>{{ 'Add' | translate }}
