--- a/src/pages/chords-detail/chords-detail.html
+++ b/src/pages/chords-detail/chords-detail.html
@@ -14,8 +14,9 @@
             <ion-item-divider *ngIf="config.chords.detail_scale">{{ 'Scale' | translate }}</ion-item-divider>
             <ion-item *ngIf="config.chords.detail_scale">
                 <ion-row class="strings-container">
-                    <ion-col *ngFor="let s of scale">
-                        <note-name [note]="s" [french]="config.general.letter_in_french"></note-name>
+                    <ion-col *ngFor="let s of scale;let i = index;">
+                        <note-name [class.active]="scale_parts.indexOf(i+1) >= 0" [note]="s" [french]="config.general.letter_in_french"></note-name>
+
                     </ion-col>
                 </ion-row>
             </ion-item>
